<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Home</string>
    <string name="bottom_title_upcoming_event">Upcoming</string>
    <string name="bottom_title_finished_event">Finished</string>
    <string name="bottom_title_favourite_event">Favourite</string>
    <string name="bottom_title_settings">Settings</string>
    <string name="title_upcoming_event">Upcoming Event</string>
    <string name="title_finished_event">Finished Event</string>
    <string name="page_title_home">Dicoding Event</string>
    <style name="page_title_upcoming">Upcoming Event</style>
    <string name="page_title_finished">Finished Event</string>
    <string name="searchbar_hint">Masukkan Nama Event</string>
    <string name="error_message">Anda tidak terhubung dengan Internet :(</string>
    <string name="empty_data">Anda belum menambahkan event ke Favorit, silahkan tambahkan Event ke Favorit</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Enable Event Notification</string>
    <!--
            IMAGE CONTENT DESCRIPTION
    -->
    <string name="event_image_title">Event Dicoding</string>

    <!--
            DETAIL PAGE STRING
    -->
    <string name="image_event">Event Image</string>
    <string name="owner_name">PENYELENGGARA</string>
    <string name="begin_time">JADWAL PELAKSANAAN</string>
    <string name="start_event">Mulai</string>
    <string name="end_event">Selesai</string>
    <string name="quota">QUOTA</string>
    <string name="quota_left">SISA KUOTA</string>
    <string name="register">REGISTER</string>
</resources>