<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_settings"
        style="@style/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/bottom_title_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <!-- Dark Mode Option -->
    <LinearLayout
        android:id="@+id/option_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_settings">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enable_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <!-- Enable Notification Option -->
    <LinearLayout
        android:id="@+id/option_enable_notification"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_dark_mode">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enable_notification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
